# stealcell

./: CHANGELOG.md  Cargo.toml  Makefile.toml  book.toml  codecov.yml  contributing.md  readme.md  release-plz.toml
.github/workflows/: ci.yml
crates/stealcell/: CHANGELOG.md  Cargo.toml
crates/stealcell/examples/: stealcell_example.rs
crates/stealcell/src/: lib.rs  stealcell.rs
