[package]
name = "stealcell"
version = "0.1.0"
description = "An Option like cell where the value can be temporarily stolen."
readme = "../../readme.md"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
no_std = []

[dependencies]

[[example]]
name = "stealcell_example"
path = "examples/stealcell_example.rs"
